--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 <body>
     <h1>HTML Basics.</h1>
     <h2>This Is My First ALX Project.</h2>
-    <h3>The Project Is About HTML Basics</h3>
+    <h3>The Project Is About HTML Basics.</h3>
     <p>HTML stands for Hypertext Markup Language.</p>
     <p>HTML is the language used to describe the structure of the document which is meant to be displayed on the web.</p>
     <p>All HTML documents starts with a <!DOCTYPE> declaration.</p>
-    <p>Without the <!DOCTYPE> decl;aration, the document is not regarded a HTML document.</p>
+    <p>Without the <!DOCTYPE> declaration, the document is not regarded a HTML document.</p>
 <img src="./https://i.ibb.co/gTDZZT8/ALX-Logo-07.png " alt="image from alx">
 </body>
 </html> 
