--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,6 +6,19 @@
     <title>My FIrst Assignment</title>
 </head>
 <body>
+    <header>
+        <ul>
+            <li><a href="https://github.com/kevinotieno254/My_First_Portfolio/blob/main/html_basic/index.html">Goes to index.html</a></li>
+            <li><a href="https://github.com/kevinotieno254/My_First_Portfolio/blob/main/html_basic/tweets.html">Goes to tweets.html</a></li>
+        </ul>
+    </header>
+    <footer>
+        <p>Made by Kevin Otieno Ouma <a href="https://github.com/kevinotieno254/My_First_Portfolio/blob/main/html_basic/tweets.html">My tweet.html page</a></p>
+    </footer>
+    <main>
+        <article>
+    </main>
+    <a href="tweets.html">About Me</a>
     <h1>HTML BASICS</h1>
     <p>Html stands for Hypertext Markup Language.</p>
     <H2>HTML ELEMENTS</H2>
@@ -15,6 +28,49 @@
     <p>Without the <!DOCTYPE> decleration, the document is not regarded a Html document.</p>
     <a href="https://twitter.com/NationAfrica/status/1804812873937359234"></a>
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="image from alx">
+    <table>
+        <thead>
+            <p>Here is the table head</p>
+            <tr>
+                <th>NAME</th>
+                <th>AGE</th>
+                <th>COUNTRY</th>
+            </tr>
+             </thead>
+             <tbody>
+                <tr>
+                    <td>Jhon</td>
+                    <td>25</td>
+                    <td>USA</td>
+                </tr>
+             </tbody>
+             <tbody>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+                </tr>
+             </tbody>
+             <tbody>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+                </tr>
+             </tbody>
+             <tbody>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+                </tr>
+             </tbody>
+    </table>
+</article>
+<aside>
+    <p>placeholder to add comment thread later.</p>
+</aside>
+</main>
 </body>
 
 </html>
