--- a/css_basic/tweets.html
+++ b/css_basic/tweets.html
@@ -1,53 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link href="base.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
-
-    <title>Tweets</title>
-  </head>
-  <body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio</title>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body>
     <header>
-      <nav>
-        <ul>
-          <li class="logo">&#9812;</li>
-          <li><a href="/css_basic/">Home</a></li>
-          <li><a href="/css_basic/">Tweets</a></li>
-        </ul>
-      </nav>
+        <h1>Jackline Mutuku Portfolio -Tweets</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </nav>
     </header>
     <main>
-      <article>
-        <blockquote class="twitter-tweet">
-          <p lang="en" dir="ltr">
-            once again, the games✨
-            <a href="https://t.co/a7TKu70dTO">pic.twitter.com/a7TKu70dTO</a>
-          </p>
-          &mdash; Xbox (@Xbox)
-          <a
-            href="https://twitter.com/Xbox/status/1799869701704892823?ref_src=twsrc%5Etfw"
-            >June 9, 2024</a
-          >
-        </blockquote>
-      </article>
-      <aside>
-        <p>placeholder to add comment thread later</p>
-      </aside>
+        <article>
+   <p>Latest Tweet</p>
+   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Dive into the main highlights of our Professional Foundations Programme!<br><br>Which aspect of your skills are you eager to enhance?<br><br>Complete your application via: <a href="https://t.co/1Thqy4284w">https://t.co/1Thqy4284w</a><a href="https://twitter.com/hashtag/ALXAfrica?src=hash&amp;ref_src=twsrc%5Etfw">#ALXAfrica</a> <a href="https://twitter.com/hashtag/ALXProgrammes?src=hash&amp;ref_src=twsrc%5Etfw">#ALXProgrammes</a> <a href="https://twitter.com/hashtag/ProfessionalFoundations?src=hash&amp;ref_src=twsrc%5Etfw">#ProfessionalFoundations</a> <a href="https://twitter.com/hashtag/DoHardThings?src=hash&amp;ref_src=twsrc%5Etfw">#DoHardThings</a> <a href="https://t.co/vj7SzmLwfR">pic.twitter.com/vj7SzmLwfR</a></p>&mdash; ALX (@alx_africa) <a href="https://twitter.com/alx_africa/status/1803774578398814266?ref_src=twsrc%5Etfw">June 20, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <p>Get back to homepage <a href="index.html">Home</a>.</p>
+        </article>
+    <aside>
+       <p>text</p>
+    </aside>
     </main>
     <footer>
-      <p>
-        Made by JohnKelvin -
-        <a href="http://inboundcreatives.com">Inbound Creatives</a>
-      </p>
-
-      <script
-        async
-        src="https://platform.twitter.com/widgets.js"
-        charset="utf-8"
-      ></script>
+        <p>Made by Jackline Mutuku <a href="https://x.com/jacymwende" target="_blank">My Story</a></p>
     </footer>
-  </body>
+</body>
 </html>
