--- a/html_basic/tweets.html
+++ b/html_basic/tweets.html
@@ -3,11 +3,30 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My FIrst Assignment</title>
+    <title>Personal Portfolio</title>
 </head>
 <body>
-    <h1>This Is My First Project On ALX</h1>
-    <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Youth protest in Nyahururu town after President Ruto&#39;s<br>address at ACK church <a href="https://t.co/zcJFKVV4HQ">pic.twitter.com/zcJFKVV4HQ</a></p>&mdash; NTV Kenya (@ntvkenya) <a href="https://twitter.com/ntvkenya/status/1804853112991015065?ref_src=twsrc%5Etfw">June 23, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
-
+    <header>
+        <h1>Jackline Mutuku Portfolio -Tweets</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="tweets.html">Tweets</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <article>
+   <p>Latest Tweet</p>
+   <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Dive into the main highlights of our Professional Foundations Programme!<br><br>Which aspect of your skills are you eager to enhance?<br><br>Complete your application via: <a href="https://t.co/1Thqy4284w">https://t.co/1Thqy4284w</a><a href="https://twitter.com/hashtag/ALXAfrica?src=hash&amp;ref_src=twsrc%5Etfw">#ALXAfrica</a> <a href="https://twitter.com/hashtag/ALXProgrammes?src=hash&amp;ref_src=twsrc%5Etfw">#ALXProgrammes</a> <a href="https://twitter.com/hashtag/ProfessionalFoundations?src=hash&amp;ref_src=twsrc%5Etfw">#ProfessionalFoundations</a> <a href="https://twitter.com/hashtag/DoHardThings?src=hash&amp;ref_src=twsrc%5Etfw">#DoHardThings</a> <a href="https://t.co/vj7SzmLwfR">pic.twitter.com/vj7SzmLwfR</a></p>&mdash; ALX (@alx_africa) <a href="https://twitter.com/alx_africa/status/1803774578398814266?ref_src=twsrc%5Etfw">June 20, 2024</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    <p>Get back to homepage <a href="index.html">Home</a>.</p>
+        </article>
+    <aside>
+       <p>text</p>
+    </aside>
+    </main>
+    <footer>
+        <p>Made by Jackline Mutuku <a href="https://x.com/jacymwende" target="_blank">My Story</a></p>
+    </footer>
 </body>
 </html>
