--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -1,96 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link href="base.css" rel="stylesheet" />
-    <link href="styles.css" rel="stylesheet" />
-
-    <title>My First Portfolio</title>
-  </head>
-  <body class="works_on_smartphone">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Personal Portfolio</title>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
+</head>
+<body class="works_on_smartphone">
     <header>
-      <nav>
+    <h1>Jackline Mutuku Portfolio</h1>
+    <nav>
         <ul>
-          <li class="logo">&#9812;</li>
-          <li><a href="/css_basic/index.html">Home</a></li>
-          <li><a href="/css_basic/tweets.html">Tweets</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
         </ul>
-      </nav>
+    </nav>
     </header>
     <main>
-      <article>
-        <h1>My First Portfolio</h1>
-        <p>
-          Hey there! I'm on the exciting journey of becoming a front-end
-          developer.
-        </p>
-        <h2>About Me</h2>
-        <p>
-          I absolutely love playing around with HTML, CSS, and JavaScript to
-          build cool stuff on the web.
-        </p>
-        <p>
-          My goal is to create websites that not only look fantastic but also
-          work smoothly for everyone who visits them, no matter what device or
-          browser they're using.
-        </p>
-        <h3>More info</h3>
-        <p>
-          I'm all about turning creative ideas into interactive online
-          experiences that are a joy to use. I'm constantly learning and keeping
-          up with what's new in the field so I can bring fresh ideas to the
-          table.
-        </p>
-        <p>
-          Can't wait to contribute my passion for design and technology to the
-          world of web development!
-        </p>
-        <a href="https://example.com/" target="_blank"
-          ><img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX logo"
-        /></a>
-        <table>
-          <thead>
-            <tr>
-              <th>Name</th>
-              <th>Age</th>
-              <th>Country</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>John</td>
-              <td>25</td>
-              <td>USA</td>
-            </tr>
-            <tr>
-              <td>Emily</td>
-              <td>28</td>
-              <td>Canada</td>
-            </tr>
-            <tr>
-              <td>Michael</td>
-              <td>32</td>
-              <td>Australia</td>
-            </tr>
-            <tr>
-              <td>Sophia</td>
-              <td>21</td>
-              <td>UK</td>
-            </tr>
-          </tbody>
-        </table>
-      </article>
-      <aside>
-        <p>placeholder to add comment thread later</p>
-      </aside>
+        <article>
+    <h2>About Me</h2>
+    <p>A junior front-end developer open to collaborate and work with like-minded individuals and organizations.</p>
+    <p>I enjoy solving problems and finding solutions that have a positive impact on society</p>
+    <h2>Projects</h2>
+    <p>Selected projects that showcase my skills</p>
+    <h2>Blog</h2>
+    <p>A link to my personal blog to share ideas</p>
+    <h3>Let's Connect</h3>
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+    </a>
+    <p>Check out my latest tweets <a href="tweets.html">here</a>.</p>
+    <table>
+        <thead>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+        </tr>
+        <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+        </tr>
+        <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+        </tr>
+        <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+        </tr>
+     </tbody>
+    </table>
+    </article>
+    <aside>
+        <p>text</p>
+    </aside>
     </main>
     <footer>
-      <p>
-        Made by JohnKelvin -
-        <a href="http://inboundcreatives.com">Inbound Creatives</a>
-      </p>
+        <p>Made by Jackline Mutuku <a href="https://x.com/jacymwende" target="_blank">My Story</a></p>
     </footer>
-  </body>
+</body>
 </html>
