--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -3,74 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My FIrst Assignment</title>
+    <title>Personal Portfolio</title>
 </head>
 <body>
     <header>
+    <h1>Jackline Mutuku Portfolio</h1>
+    <nav>
         <ul>
-            <li><a href="https://github.com/kevinotieno254/My_First_Portfolio/blob/main/html_basic/index.html">Goes to index.html</a></li>
-            <li><a href="https://github.com/kevinotieno254/My_First_Portfolio/blob/main/html_basic/tweets.html">Goes to tweets.html</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="tweets.html">Tweets</a></li>
         </ul>
+    </nav>
     </header>
-    <footer>
-        <p>Made by Kevin Otieno Ouma <a href="https://github.com/kevinotieno254/My_First_Portfolio/blob/main/html_basic/tweets.html">My tweet.html page</a></p>
-    </footer>
     <main>
         <article>
-    </main>
-    <a href="tweets.html">About Me</a>
-    <h1>HTML BASICS</h1>
-    <p>Html stands for Hypertext Markup Language.</p>
-    <H2>HTML ELEMENTS</H2>
-    <p>Html is the language used to describe the structure of the document which is meant to be displayed on the web.</p>
-    <H3>HTML TAGS</H3>
-    <p>All Html documents starts with the <!DOCTYPE> decleration.</p>
-    <p>Without the <!DOCTYPE> decleration, the document is not regarded a Html document.</p>
-    <a href="https://twitter.com/NationAfrica/status/1804812873937359234"></a>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="image from alx">
+    <h2>About Me</h2>
+    <p>A junior front-end developer open to collaborate and work with like-minded individuals and organizations.</p>
+    <p>I enjoy solving problems and finding solutions that have a positive impact on society</p>
+    <h2>Projects</h2>
+    <p>Selected projects that showcase my skills</p>
+    <h2>Blog</h2>
+    <p>A link to my personal blog to share ideas</p>
+    <h3>Let's Connect</h3>
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="ALX Logo">
+    </a>
+    <p>Check out my latest tweets <a href="tweets.html">here</a>.</p>
     <table>
         <thead>
-            <p>Here is the table head</p>
-            <tr>
-                <th>NAME</th>
-                <th>AGE</th>
-                <th>COUNTRY</th>
-            </tr>
-             </thead>
-             <tbody>
-                <tr>
-                    <td>Jhon</td>
-                    <td>25</td>
-                    <td>USA</td>
-                </tr>
-             </tbody>
-             <tbody>
-                <tr>
-                    <td>Emily</td>
-                    <td>28</td>
-                    <td>Canada</td>
-                </tr>
-             </tbody>
-             <tbody>
-                <tr>
-                    <td>Michael</td>
-                    <td>32</td>
-                    <td>Australia</td>
-                </tr>
-             </tbody>
-             <tbody>
-                <tr>
-                    <td>Sophia</td>
-                    <td>21</td>
-                    <td>UK</td>
-                </tr>
-             </tbody>
+        <tr>
+            <th>Name</th>
+            <th>Age</th>
+            <th>Country</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+        </tr>
+        <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canada</td>
+        </tr>
+        <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+        </tr>
+        <tr>
+            <td>Sophia</td>
+            <td>21</td>
+            <td>UK</td>
+        </tr>
+     </tbody>
     </table>
-</article>
-<aside>
-    <p>placeholder to add comment thread later.</p>
-</aside>
-</main>
+    </article>
+    <aside>
+        <p>text</p>
+    </aside>
+    </main>
+    <footer>
+        <p>Made by Jackline Mutuku <a href="https://x.com/jacymwende" target="_blank">My Story</a></p>
+    </footer>
 </body>
-
 </html>
